# icon

./: .gitattributes  Cargo.toml  Justfile  README.md
.circleci/: config.yml
data/: lobechat.json
data/lobe-icons/src/Adobe/components/: Color.tsx
sr/: icon.sr
src/: bloom.rs  dx_config.rs  index.rs  lib.rs  parser.rs  perfect_hash.rs  precomputed.rs  search.rs  types.rs  wasm.rs
web/: index.html
